fix: fixed the scroll problem on exiting the sidebar on mobile

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,8 @@ h1 span {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 120px;
     margin: 20px 0;
     overflow: hidden;
 }
@@ -204,6 +206,7 @@ h1 span {
     background-color: #2564eb38;
     position: relative;
     overflow: hiddden;
+    animation: pulse 1s infinite alternate;
 }
 .pulse::after {
     content: '';
@@ -418,6 +421,17 @@ footer div {
 footer div p {
     font-weight: 500;
     color: hsl(215, 25%, 30%);
+}
+
+/* Animations */
+
+@keyframes pulse {
+  0% {
+    padding: 50px;
+  }
+  100% {
+    padding: 48px;
+  }
 }
 
 /* Responsiive Design */
